// Vitest Snapshot v1

exports[`setTimeouts with all timeouts 1`] = `
Map {
  "implicit" => 222,
  "pageLoad" => 333,
  "script" => 444,
}
`;

exports[`setTimeouts with implicit and pageLoad timeout 1`] = `
Map {
  "implicit" => 222,
  "pageLoad" => 333,
  "script" => 30000,
}
`;

exports[`setTimeouts with implicit timeout 1`] = `
Map {
  "implicit" => 222,
  "pageLoad" => 100,
  "script" => 30000,
}
`;

exports[`should rerun command if it was executed within navigation 1`] = `
[
  [
    "command",
    {
      "command": "elementClick",
      "params": {
        "elementId": "123",
        "text": "some text",
        "value": [
          "some value",
        ],
      },
      "retries": 0,
    },
  ],
  [
    "command",
    {
      "command": "elementClick",
      "params": {
        "elementId": "123",
        "text": "some text",
        "value": [
          "some value",
        ],
      },
      "retries": 1,
    },
  ],
  [
    "result",
    {
      "command": "elementClick",
      "params": {
        "elementId": "123",
        "text": "some text",
        "value": [
          "some value",
        ],
      },
      "result": {
        "value": null,
      },
      "retries": 1,
    },
  ],
]
`;

exports[`should return proper result 1`] = `
[
  [
    "command",
    {
      "command": "elementClick",
      "params": {
        "elementId": "123",
        "text": "some text",
        "value": [
          "some value",
        ],
      },
      "retries": 0,
    },
  ],
  [
    "result",
    {
      "command": "elementClick",
      "params": {
        "elementId": "123",
        "text": "some text",
        "value": [
          "some value",
        ],
      },
      "result": {
        "value": {
          "elementId": "123",
          "text": "some text",
          "value": [
            "some value",
          ],
        },
      },
      "retries": 0,
    },
  ],
]
`;
